# distributed_configuration_management

./: Makefile  Readme.md  docker-compose.yml  go.mod  go.sum  main.go
cmd/demo/: demo.go
cpp/: CMakeLists.txt  README.md
cpp/demo/: CMakeLists.txt  Child.h  Parent.h  main.cpp
cpp/dockerfiles/: Dockerfile.builder_base  Dockerfile.builder_remote
cpp/lib/: CMakeLists.txt
cpp/lib/cfgStore/: Communicator.h  Component.h  Constants.h  LocalComponent.cpp  LocalComponent.h  RemoteComponent.cpp  RemoteComponent.h  RemoteComponentStub.cpp  RemoteComponentStub.h  Utils.cpp  Utils.h
cpp/scripts/: start_remote_builder.sh
cpp/tests/: CMakeLists.txt  main.cpp
golang/: .dockerignore  .env  Dockerfile  Makefile  Readme.md  docker-compose.yml  go.mod  go.sum
golang/cmd/demo/: demo.go
golang/internal/prototype/: actuators.go  constants.go  controllers.go  displayUnit.go  environment.go  sensors.go  system.go
golang/monitoring/prometheus/: prometheus.yml
golang/pkg/communicator/: client.go
internal/component/: component.go  localComponent.go  remoteComponent.go  remoteComponentStub.go
internal/demo/: actuators.go  constants.go  controllers.go  demoComponent.go  displayUnit.go  environment.go  sensors.go  system.go
internal/prototype/: acController.go  actuators.go  constants.go  controllers.go  demoComponent.go  displayUnit.go  environment.go
monitoring/prometheus/: prometheus.yml
pkg/communicator/: client.go
pkg/component/: component.go  constants.go  localComponent.go  remoteComponent.go  remoteComponentStub.go
pkg/utils/: logging.go
(+6 files in other folders)
